<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".fragment.signup.SingUpFragment">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/profileTextView"
            style="@style/RobotoRegularTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/profile_creation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <FrameLayout
            android:id="@+id/avatarFrameLayout"
            android:layout_width="142dp"
            android:layout_height="142dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profileTextView">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/avatarImageView"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/bear" />

            <ImageView
                android:id="@+id/takePhotoImageView"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:layout_gravity="bottom|end"
                android:layout_marginStart="20dp"
                android:contentDescription="@string/take_photo"
                android:src="@drawable/ic_camera" />
        </FrameLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signUpFirstNameEdtIptLyt"
            style="@style/Widget.App.TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/first_name"
            android:paddingTop="5dp"
            app:errorEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/avatarFrameLayout"
            app:layout_constraintWidth_percent="0.69">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signUpFirstNameEditText"
                style="@style/TextAppearance.App.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signUpMailEdtIptLyt"
            style="@style/Widget.App.TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/email_address"
            android:paddingTop="5dp"
            app:errorEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signUpFirstNameEdtIptLyt"
            app:layout_constraintWidth_percent="0.69">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signUpMailEditText"
                style="@style/TextAppearance.App.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signUpPasswordEdtIptLyt"
            style="@style/Widget.App.TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/password"
            android:paddingTop="5dp"
            app:errorEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signUpMailEdtIptLyt"
            app:layout_constraintWidth_percent="0.69">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signUpPasswordEditText"
                style="@style/TextAppearance.App.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signUpWebSiteEdtIptLyt"
            style="@style/Widget.App.TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/web_site"
            android:paddingTop="5dp"
            app:errorEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signUpPasswordEdtIptLyt"
            app:layout_constraintWidth_percent="0.69">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signUpWebSiteEditText"
                style="@style/TextAppearance.App.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/submitButton"
            style="@style/BaseButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:alpha="0.5"
            android:enabled="false"
            android:text="@string/submit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.07"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signUpWebSiteEdtIptLyt"
            app:layout_constraintWidth_percent="0.69" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>