<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.signin.SignInFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/helloTextView"
        style="@style/RobotoRegularTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/hello"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/welcomeTextView"
        style="@style/RobotoRegularTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:lineSpacingExtra="1.2dp"
        android:text="@string/welcome_text"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/helloTextView" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/avatarImageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginHorizontal="120dp"
        android:layout_marginTop="40dp"
        android:minHeight="150dp"
        app:layout_constraintCircleRadius="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcomeTextView"
        tools:src="@drawable/bear" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/webSiteTextView"
        style="@style/RobotoRegularTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/avatarImageView"
        tools:text="eminesa.com" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/nameTextView"
        style="@style/RobotoRegularTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="7dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/webSiteTextView"
        tools:text="Emine Sa" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mailTextView"
        style="@style/RobotoRegularTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="7dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameTextView"
        tools:text="eminesa34@gmail.com" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signInButton"
        style="@style/BaseButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/sign_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mailTextView"
        app:layout_constraintWidth_percent="0.69" />

</androidx.constraintlayout.widget.ConstraintLayout>